# honeycomb

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  404.html  <  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  \  applications.dockerfile  bench.out  benchmarks.dockerfile  crates.js  flake.nix  help.html  index.css  index.html  print.html  search-index.js  searchindex.js  searchindex.json  settings.html  shell.nix  src-files.js  theme.js  tmp.cmap
applications/: Cargo.toml  benchmarks.sh  build.rs  lib.rs
applications/cut_edges/: cli.rs  dispatch.rs  internals.rs  main.rs
applications/generate_grid/: cli.rs  gpu.rs  main.rs
applications/grisubal/: cli.rs  main.rs
applications/incremental_delaunay/: cli.rs  main.rs
applications/incremental_delaunay/internals/: cavity.rs  delaunay.rs  mod.rs  sample.rs
applications/overlay-grid/: cli.rs  main.rs
applications/overlay-grid/internals/: adaptive_grid.rs  dualization.rs  helpers.rs  mod.rs  model.rs  regularisation.rs
applications/remesh/: cli.rs  internals.rs  main.rs
applications/scripts/: benchmarks.sh  delaunay.sh  delaunay_min.sh  delaunay_opt.sh  gridgen.sh  overlay-grid.sh  remesh.sh
applications/shift_vertices/: cli.rs  internals.rs  main.rs
applications/triangulate/: cli.rs  internals.rs  main.rs
benches/: Cargo.toml  README.md  builder.py  grisubal.py  grisubal_plot.py
benches/benches/: shift.rs
benches/benches/builder/: grid_size.rs  time.rs
benches/benches/grisubal/: grid_size.rs  time.rs
benches/benches/splitsquaremap/: init.rs  shift.rs
benches/benches/squaremap/: init.rs  shift.rs  split.rs
benches/benches/triangulate/: quads.rs
benches/src/: builder.rs  cli.rs  cut_edges.rs  delaunay.rs  grid_gen.rs  grid_random_split.rs  grisubal.rs  lib.rs  main.rs  remesh.rs  shift.rs  shift_no_conflict.rs  shift_noncollide.rs  utils.rs
examples/: Cargo.toml  cmap2.html  quads.vtk  shape.vtk
examples/examples/: parallel_shift.rs  render.rs
examples/examples/io/: quad.rs  read.rs  tri.rs  write.rs
examples/examples/kernels/: grisubal.rs
examples/examples/memory_usage/: compute.rs  plot.py
examples/examples/render/: default_no_aa.rs  default_smaa1x.rs  splitsquaremap.rs  squaremap.rs  squaremap_parameterized.rs  squaremap_shift.rs  squaremap_split_diff.rs  squaremap_split_some.rs
examples/src/: lib.rs
honeycomb/: Cargo.toml  all.html  index.html
honeycomb-benches/: Cargo.toml
honeycomb-benches/benches/splitsquaremap/: init.rs  shift.rs
honeycomb-benches/benches/squaremap/: init.rs  shift.rs  split.rs
honeycomb-benches/src/: lib.rs
honeycomb-core/: Cargo.toml  build.rs
honeycomb-core/benches/cmap2/: basic_ops.rs  constructors.rs  link_and_sew.rs
honeycomb-core/src/: common.rs  coords.rs  dart.rs  embed.rs  generation.rs  lib.rs  orbits.rs  prelude.rs  twomap.rs  vector.rs  vertex.rs
honeycomb-core/src/attributes/: collections.rs  manager.rs  mod.rs  storage.rs  tests.rs  traits.rs
honeycomb-core/src/cells/: attribute_collections.rs  attributes.rs  collections.rs  identifiers.rs  mod.rs  orbits.rs
honeycomb-core/src/cmap/: collections.rs  common.rs  components.rs  dart.rs  embed.rs  error.rs  map.rs  mod.rs
honeycomb-core/src/cmap2/: advanced_ops.rs  basic_ops.rs  embed.rs  io.rs  link_and_sew.rs  mod.rs  structure.rs  tests.rs  utils.rs
honeycomb-core/src/cmapbuilder/: mod.rs  structure.rs  tests.rs
honeycomb-core/src/common/: darts.rs  mod.rs
honeycomb-core/src/geometry/: mod.rs  tests.rs  vector.rs  vertex.rs
honeycomb-core/src/pmap/: common.rs  mod.rs
honeycomb-core/src/spatial_repr/: coords.rs  mod.rs  tests.rs  vector.rs  vertex.rs
honeycomb-core/src/utils/: generation.rs  mod.rs
honeycomb-examples/: Cargo.toml
honeycomb-examples/examples/io/: quad.rs  tri.rs  write.rs
honeycomb-examples/examples/memory_usage/: compute.rs  plot.py
honeycomb-examples/examples/render/: default_no_aa.rs  default_smaa1x.rs  splitsquaremap.rs  squaremap.rs  squaremap_parameterized.rs  squaremap_shift.rs  squaremap_split_diff.rs  squaremap_split_some.rs
honeycomb-examples/src/: lib.rs
honeycomb-kernels/: Cargo.toml
honeycomb-kernels/src/: lib.rs
honeycomb-kernels/src/cavity/: mod.rs
honeycomb-kernels/src/cell_insertion/: mod.rs  tests.rs  vertices.rs
honeycomb-kernels/src/coloring/: dsatur.rs  mod.rs  tests.rs
honeycomb-kernels/src/delaunay/: mod.rs
honeycomb-kernels/src/dvr/: lambda.rs  mod.rs  node.rs  quality.rs
honeycomb-kernels/src/grid_generation/: internals.rs  mod.rs  tests.rs
honeycomb-kernels/src/grisubal/: clip.rs  grid.rs  inp.rs  kernel.rs  mod.rs  model.rs  tests.rs  timers.rs
honeycomb-render/: Cargo.toml
honeycomb-render/examples/: render_default_no_aa.rs  render_default_smaa1x.rs  render_splitsquaremap.rs  render_squaremap.rs
honeycomb-render/src/: app.rs  camera.rs  capture.rs  gui.rs  handle.rs  import_map.rs  lib.rs  options.rs  render_map.rs  runner.rs  shader2.wgsl  shader_data.rs  state.rs
honeycomb-utils/: Cargo.toml
honeycomb-utils/examples/: memory_usage.rs
honeycomb-utils/src/: generation.rs  lib.rs
honeycomb/prelude/: constant.NULL_DART_ID.html  constant.NULL_EDGE_ID.html  constant.NULL_FACE_ID.html  constant.NULL_VERTEX_ID.html  constant.NULL_VOLUME_ID.html  enum.AttributeError.html  enum.BuilderError.html  enum.CoordsError.html  enum.LinkError.html  enum.OrbitPolicy.html  enum.SewError.html  fn.render_2d_map.html  fn.render_3d_map.html  index.html  sidebar-items.js  struct.App.html  struct.AttrSparseVec.html  struct.CMap2.html  struct.CMap3.html  struct.CMapBuilder.html  struct.GridDescriptor.html  struct.Orbit2.html  struct.Vector2.html  struct.Vector3.html  struct.Vertex2.html  struct.Vertex3.html  trait.AttributeBind.html  trait.AttributeUpdate.html  trait.CoordsFloat.html  type.DartIdType.html  type.DartIdentifier.html  type.EdgeIdType.html  type.EdgeIdentifier.html  type.FaceIdType.html  type.FaceIdentifier.html  type.VertexIdType.html  type.VertexIdentifier.html  type.VolumeIdType.html  type.VolumeIdentifier.html
honeycomb/src/: lib.rs
(+2642 files in other folders)
