[workspace]

resolver = "2"
members = [
    "benches",
    "honeycomb-core",
    "honeycomb-kernels",
    "honeycomb-render",
    "examples",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.4.0"
homepage = "https://lihpc-computational-geometry.github.io/honeycomb/"
repository = "https://github.com/LIHPC-Computational-Geometry/honeycomb"
readme = "README.md"
description = "Combinatorial map implementation for meshing applications"
categories = ["data-structures", "mathematics", "science"]
keywords = ["mesh", "meshing"]
authors = [
    "Isaie Muron <isaie.muron@cea.fr>",
    "Cedric Chevalier <cedric.chevalier@cea.fr>",
]

[workspace.dependencies]
# members
honeycomb-benches = { version = "0.4.0", path = "./benches" }
honeycomb-core = { version = "0.4.0", path = "./honeycomb-core" }
honeycomb-kernels = { version = "0.4.0", path = "./honeycomb-kernels" }
honeycomb-examples = { version = "0.4.0", path = "./examples" }
honeycomb-render = { version = "0.4.0", path = "./honeycomb-render" }

# common
cfg-if = "1"
rustversion = "1.0.15"

# core
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
num = "0.4.2"
vtkio = { version = "0.7.0-rc1", default-features = false }

# benchmarks
criterion = "0.5.1"
iai-callgrind = "0.12.0"
rand = "0.9.0-alpha.2"

# render
bevy = { version = "0.14.1" }
bevy_egui = "0.29.0"
bevy_mod_picking = "0.20.1"
bevy_mod_outline = "0.8.1"
egui_dock = "0.13.0"

[profile.bench]
debug = true
