[workspace]

members = [
    "applications",
    "honeycomb",
    "honeycomb-core",
    "honeycomb-kernels",
    "honeycomb-render",
]
resolver = "2"

metadata.crane.name = "honeycomb"

[workspace.package]
authors = [
    "Isaie Muron <isaie.muron@cea.fr>",
    "Cedric Chevalier <cedric.chevalier@cea.fr>",
]
categories = ["data-structures", "mathematics", "science"]
description = "Combinatorial map implementation for meshing applications"
edition = "2024"
homepage = "https://lihpc-computational-geometry.github.io/honeycomb/"
keywords = ["mesh", "meshing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LIHPC-Computational-Geometry/honeycomb"
version = "0.10.0"

[workspace.dependencies]
# members
honeycomb         = { version = "0.10.0", path = "./honeycomb" }
honeycomb-core    = { version = "0.10.0", path = "./honeycomb-core" }
honeycomb-kernels = { version = "0.10.0", path = "./honeycomb-kernels" }
honeycomb-render  = { version = "0.10.0", path = "./honeycomb-render" }

honeycomb-apps = { version = "0.10.0", path = "./applications" }

# common
cfg-if      = "1"
itertools   = "0.14.0"
rayon       = "1.10.0"
rustversion = "1.0.18"
thiserror   = "2.0.11"

# core
criterion     = "0.7.0"
downcast-rs   = "2.0.1"
fast-stm      = "0.6.0"
iai-callgrind = "0.16.1"
loom          = "0.7.2"
num-traits    = "0.2.19"
vtkio         = { version = "0.7.0-rc1", default-features = false }

# applications
bindgen           = "0.72.1"
clap              = "4.5.52"
coupe             = { git = "https://github.com/LIHPC-Computational-Geometry/coupe" }
cudarc            = "0.18.1"
hwlocality        = "1.0.0-alpha.7"
nalgebra          = "0.34.1"
rand              = "0.10.0-rc.0"
regex             = "1.12.2"
smallvec          = "2.0.0-alpha.12"
tikv-jemallocator = "0.6.1"

# render
bevy             = { version = "0.14.2", default-features = false }
bevy_egui        = "0.29.0"
bevy_mod_picking = "0.20.1"
egui_dock        = "0.13.0"

[profile.bench]
debug = true

[profile.profiling]
debug    = true
inherits = "release"
