[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "applications"
publish               = false
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[lib]
doc  = false
path = "lib.rs"

[[bin]]
doc  = false
name = "cut-edges"
path = "cut_edges/main.rs"

[[bin]]
doc  = false
name = "generate-grid"
path = "generate_grid/main.rs"

[[bin]]
doc  = false
name = "grisubal"
path = "grisubal/main.rs"

[[bin]]
doc  = false
name = "remesh"
path = "remesh/main.rs"

[[bin]]
doc  = false
name = "shift-vertices"
path = "shift_vertices/main.rs"

[[bin]]
doc  = false
name = "triangulate"
path = "triangulate/main.rs"

[features]
default = ["bind-threads"]

bind-threads = ["dep:hwlocality"]
cuda         = ["dep:bindgen", "dep:cudarc", "dep:regex"]
jemalloc     = ["dep:tikv-jemallocator"]
profiling    = []
render       = ["honeycomb/render"]

[dependencies]
cfg-if.workspace    = true
clap                = { workspace = true, features = ["derive"] }
cudarc              = { workspace = true, features = ["cuda-13000"], optional = true }
honeycomb.workspace = true
hwlocality          = { workspace = true, optional = true }
rayon.workspace     = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[build-dependencies]
bindgen = { workspace = true, optional = true }
regex   = { workspace = true, optional = true }
