[package]
name = "honeycomb-benches"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Honeycomb structures and algorithms benchmarks"
authors.workspace = true
publish = false

[features]
default = ["bind-threads"]
_single_precision = []
bind-threads = ["dep:hwlocality"]
jemalloc = ["dep:tikv-jemallocator"]
profiling = []

# deps

[dependencies]
clap = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
honeycomb.workspace = true
hwlocality = { workspace = true, optional = true }
nalgebra.workspace = true
rayon.workspace = true
rand = { workspace = true, features = ["small_rng"] }
thiserror.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[build-dependencies]
rustversion.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
iai-callgrind.workspace = true
rand = { workspace = true, features = ["small_rng"] }

[[bin]]
name = "hc-bench"
path = "src/main.rs"
doc = false

[lib]
name = "honeycomb_benches"
path = "src/lib.rs"

# benches

## Core benchmarks

[[bench]]
name = "prof-cmap2-build"
path = "benches/core/cmap2/constructors.rs"
harness = false

[[bench]]
name = "prof-cmap2-basic"
path = "benches/core/cmap2/basic_ops.rs"
harness = false

[[bench]]
name = "prof-cmap2-sewing-unsewing"
path = "benches/core/cmap2/link_and_sew.rs"
harness = false

[[bench]]
name = "fetch-icells"
path = "benches/core/cmap2/fetch_icells.rs"
harness = false

## Builder benchmarks

[[bench]]
name = "builder"
path = "benches/builder/time.rs"
harness = false

[[bench]]
name = "builder-grid-size"
path = "benches/builder/grid_size.rs"
harness = false

## Kernels benchmarks

[[bench]]
name = "grisubal"
path = "benches/grisubal/time.rs"
harness = false

[[bench]]
name = "grisubal-grid-size"
path = "benches/grisubal/grid_size.rs"
harness = false

[[bench]]
name = "triangulate-quads"
path = "benches/triangulate/quads.rs"
harness = false

