[package]
authors.workspace    = true
description          = "Honeycomb structures and algorithms benchmarks"
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "honeycomb-benches"
publish              = false
repository.workspace = true
version.workspace    = true

[features]
_single_precision = []
bind-threads      = ["dep:hwlocality"]
default           = ["bind-threads"]
jemalloc          = ["dep:tikv-jemallocator"]
profiling         = []

# deps

[dependencies]
cfg-if.workspace    = true
clap                = { workspace = true, features = ["derive"] }
honeycomb.workspace = true
hwlocality          = { workspace = true, optional = true }
rand                = { workspace = true, features = ["small_rng"] }
rayon.workspace     = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[build-dependencies]
rustversion.workspace = true

[dev-dependencies]
criterion               = { workspace = true, features = ["html_reports"] }
iai-callgrind.workspace = true
rand                    = { workspace = true, features = ["small_rng"] }

[[bin]]
doc  = false
name = "hc-bench"
path = "src/main.rs"

[lib]
name = "honeycomb_benches"
path = "src/lib.rs"

# benches

## Core benchmarks

[[bench]]
harness = false
name    = "prof-cmap2-build"
path    = "benches/core/cmap2/constructors.rs"

[[bench]]
harness = false
name    = "prof-cmap2-basic"
path    = "benches/core/cmap2/basic_ops.rs"

[[bench]]
harness = false
name    = "prof-cmap2-sewing-unsewing"
path    = "benches/core/cmap2/link_and_sew.rs"

[[bench]]
harness = false
name    = "fetch-icells"
path    = "benches/core/cmap2/fetch_icells.rs"

## Builder benchmarks

[[bench]]
harness = false
name    = "builder"
path    = "benches/builder/time.rs"

[[bench]]
harness = false
name    = "builder-grid-size"
path    = "benches/builder/grid_size.rs"

## Kernels benchmarks

[[bench]]
harness = false
name    = "grisubal"
path    = "benches/grisubal/time.rs"

[[bench]]
harness = false
name    = "grisubal-grid-size"
path    = "benches/grisubal/grid_size.rs"

[[bench]]
harness = false
name    = "triangulate-quads"
path    = "benches/triangulate/quads.rs"
