[package]
name = "honeycomb-examples"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Usage examples"
authors.workspace = true
publish = false
autoexamples = false

[dev-dependencies]
honeycomb-core = { workspace = true, features = ["utils", "io"] }
honeycomb-render = { workspace = true }
honeycomb-kernels = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rayon.workspace = true

# kernel

[[example]]
name = "grisubal"
path = "examples/kernels/grisubal.rs"

# I/O

[[example]]
name = "io_read"
path = "examples/io/read.rs"

[[example]]
name = "io_write"
path = "examples/io/write.rs"

# memory usage

[[example]]
name = "memory_usage"
path = "examples/memory_usage/compute.rs"

# parallelization

[[example]]
name = "parallel_shift"
path = "examples/parallel_shift.rs"

# rendering

[[example]]
name = "render"
path = "examples/render.rs"
