[package]
authors.workspace    = true
autoexamples         = false
description          = "Usage examples"
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "honeycomb-examples"
publish              = false
repository.workspace = true
version.workspace    = true

[dev-dependencies]
honeycomb-core    = { workspace = true }
honeycomb-kernels = { workspace = true }
honeycomb-render  = { workspace = true }
rand              = { workspace = true, features = ["small_rng"] }
rayon.workspace   = true

# kernel

[[example]]
name = "grisubal"
path = "examples/kernels/grisubal.rs"

# I/O

[[example]]
name = "io_read"
path = "examples/io/read.rs"

[[example]]
name = "io_write"
path = "examples/io/write.rs"

# parallelization

[[example]]
name = "parallel_shift"
path = "examples/parallel_shift.rs"

# rendering

[[example]]
name = "render"
path = "examples/render.rs"
