[package]
name = "honeycomb-benches"
version = "0.1.3"
edition = "2021"

[dev-dependencies]
honeycomb-core = { path = "../honeycomb-core", features = ["utils"] }
criterion = { version = "*", features = ["html_reports"] }
iai-callgrind = "*"
rand = { version = "*", features = ["small_rng"] }

# Iai-callgrind benchmarks

[[bench]]
name = "prof-cmap2-editing"
path = "benches/core/cmap2/editing.rs"
harness = false

[[bench]]
name = "prof-cmap2-reading"
path = "benches/core/cmap2/reading.rs"
harness = false

[[bench]]
name = "prof-cmap2-sewing-unsewing"
path = "benches/core/cmap2/sewing.rs"
harness = false


# Criterion benchmarks

[[bench]]
name = "squaremap-init"
path = "benches/squaremap/init.rs"
harness = false

[[bench]]
name = "squaremap-shift"
path = "benches/squaremap/shift.rs"
harness = false

[[bench]]
name = "squaremap-splitquads"
path = "benches/squaremap/split.rs"
harness = false

[[bench]]
name = "splitsquaremap-init"
path = "benches/splitsquaremap/init.rs"
harness = false

[[bench]]
name = "splitsquaremap-shift"
path = "benches/splitsquaremap/shift.rs"
harness = false
