[package]
name = "honeycomb-benches"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core structure benchmarks"
authors.workspace = true
publish = false

[dev-dependencies]
honeycomb-core = { workspace = true, features = ["utils"] }
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.10"
rand = { version = "0.8", features = ["small_rng"] }

# Iai-callgrind benchmarks

[[bench]]
name = "prof-cmap2-editing"
path = "benches/core/cmap2/editing.rs"
harness = false

[[bench]]
name = "prof-cmap2-reading"
path = "benches/core/cmap2/reading.rs"
harness = false

[[bench]]
name = "prof-cmap2-sewing-unsewing"
path = "benches/core/cmap2/sewing.rs"
harness = false


# Criterion benchmarks

[[bench]]
name = "squaremap-init"
path = "benches/squaremap/init.rs"
harness = false

[[bench]]
name = "squaremap-shift"
path = "benches/squaremap/shift.rs"
harness = false

[[bench]]
name = "squaremap-splitquads"
path = "benches/squaremap/split.rs"
harness = false

[[bench]]
name = "splitsquaremap-init"
path = "benches/splitsquaremap/init.rs"
harness = false

[[bench]]
name = "splitsquaremap-shift"
path = "benches/splitsquaremap/shift.rs"
harness = false
