[package]
name = "honeycomb-core"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core structure implementation for combinatorial maps"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
publish = true

# [features]

# deps

[dependencies]
downcast-rs.workspace = true
fast-stm.workspace = true
itertools.workspace = true
loom.workspace= true
num-traits.workspace = true
rayon.workspace = true
thiserror.workspace = true
vtkio.workspace = true

[build-dependencies]
rustversion.workspace = true
