[package]
authors.workspace    = true
categories.workspace = true
description          = "Core structure implementation for combinatorial maps"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "honeycomb-core"
publish              = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[features]
par-internals = []

# deps

[dependencies]
downcast-rs.workspace = true
fast-stm.workspace    = true
itertools.workspace   = true
num-traits.workspace  = true
rayon.workspace       = true
rustc-hash.workspace  = true
thiserror.workspace   = true
vtkio.workspace       = true

[dev-dependencies]
anyhow.workspace = true
loom.workspace   = true

[build-dependencies]
rustversion.workspace = true
