[package]
name = "honeycomb-examples"
version = "0.1.3"
edition = "2021"

[dev-dependencies]
honeycomb-core = { path = "../honeycomb-core", features = ["utils"] }
honeycomb-render = { path = "../honeycomb-render" }

[[example]]
name = "memory_usage"
path = "examples/memory_usage/compute.rs"

[[example]]
name = "render_default_no_aa"
path = "examples/render/default_no_aa.rs"

[[example]]
name = "render_default_smaa1x"
path = "examples/render/default_smaa1x.rs"

[[example]]
name = "render_splitsquaremap"
path = "examples/render/splitsquaremap.rs"

[[example]]
name = "render_squaremap"
path = "examples/render/squaremap.rs"