[package]
name = "honeycomb-examples"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Usage examples"
authors.workspace = true
publish = false

[dev-dependencies]
honeycomb-core = { workspace = true, features = ["utils"] }
honeycomb-render = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

[[example]]
name = "memory_usage"
path = "examples/memory_usage/compute.rs"

[[example]]
name = "render_default_no_aa"
path = "examples/render/default_no_aa.rs"

[[example]]
name = "render_default_smaa1x"
path = "examples/render/default_smaa1x.rs"

[[example]]
name = "render_splitsquaremap"
path = "examples/render/splitsquaremap.rs"

[[example]]
name = "render_squaremap"
path = "examples/render/squaremap.rs"

[[example]]
name = "render_squaremap_shift"
path = "examples/render/squaremap_shift.rs"

[[example]]
name = "render_squaremap_split_diff"
path = "examples/render/squaremap_split_diff.rs"

[[example]]
name = "render_squaremap_split_some"
path = "examples/render/squaremap_split_some.rs"