[package]
name = "honeycomb-kernels"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Meshing kernel implementations using combinatorial maps"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
publish = true

[features]
profiling = []

[dependencies]
honeycomb-core.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
rand.workspace = true
rayon.workspace = true
smallvec.workspace = true
thiserror.workspace = true
vtkio.workspace = true

[build-dependencies]
rustversion.workspace = true

