[package]
authors.workspace    = true
categories.workspace = true
description          = "Meshing kernel implementations using combinatorial maps"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "honeycomb-kernels"
publish              = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[features]
profiling = []

[dependencies]
honeycomb-core.workspace = true
num-traits.workspace     = true
rayon.workspace          = true
smallvec.workspace       = true
thiserror.workspace      = true
vtkio.workspace          = true

[build-dependencies]
rustversion.workspace = true
