[package]
name = "honeycomb-render"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Visualization tool for combinatorial maps"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
publish = true

[dependencies]
honeycomb-core.workspace = true
bevy = { workspace = true, default-features = false, features = ["bevy_ui"] }
bevy_egui.workspace = true
bevy_mod_picking.workspace = true
bevy_mod_outline.workspace = true
egui_dock.workspace = true
