[package]
authors.workspace    = true
categories.workspace = true
description          = "Visualization tool for combinatorial maps"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "honeycomb-render"
publish              = true
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[dependencies]
bevy = { workspace = true, features = [
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_ui",
    "multi_threaded",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
] }
bevy_egui.workspace = true
bevy_mod_picking.workspace = true
honeycomb-core.workspace = true
# bevy_mod_outline.workspace = true
egui_dock.workspace = true
itertools.workspace = true
