[package]
name = "honeycomb"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
publish = true

[features]
default = ["kernels"]
kernels = ["dep:honeycomb-kernels"]
render = ["dep:honeycomb-render"]

[dependencies]
honeycomb-core = { workspace = true }
honeycomb-kernels = { workspace = true, optional = true }
honeycomb-render = { workspace = true, optional = true }

[build-dependencies]
rustversion.workspace = true
