[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "honeycomb"
publish               = true
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[features]
default = ["kernels"]
kernels = ["dep:honeycomb-kernels"]
render  = ["dep:honeycomb-render"]

[dependencies]
honeycomb-core    = { workspace = true, features = ["par-internals"] }
honeycomb-kernels = { workspace = true, optional = true }
honeycomb-render  = { workspace = true, optional = true }

[build-dependencies]
rustversion.workspace = true
